--- a/templates/info.html
+++ b/templates/info.html
@@ -37,14 +37,14 @@
 
 <div class="head-contenido2">
 <ul>
-<li><label for="parada">Aporte:</label>
-<input type="text" value="{{cabecera[0]}}" id="parada"></li>
+<li><label for="parada">Situacion:</label>
+<input type="text" value="{{dirigentes[0]}}" id="parada"></li>
 <li><label for="codigo">Miembros:</label>
-<input type="text" value="{{cabecera[1]}}" id="codigo"></li>
+<input type="text" value="{{dirigentes[1]}}" id="codigo"></li>
 <li><label for="municipio">Presidente:</label>
-<input type="text" value="{{cabecera[3]}}" id="municipio"></li>
+<input type="text" value="{{dirigentes[2]}}" id="municipio"></li>
 <li><label for="provincia">Veedor:</label>
-<input type="text" value="{{cabecera[4]}}" id="provincia"></li>
+<input type="text" value="{{dirigentes[3]}}" id="provincia"></li>
 </ul>
 </div>
 </div>
